force-app/main/default/objects/Board_Meeting__c/Board_Meeting__c.object-meta.xml
<CustomObject>
    <description>A board meeting (typically 4 per fiscal year). Attendance is recorded via Board Meeting Attendance so we can verify each member met the "attend 3 of 4" requirement. Not full board management — no agendas/minutes here. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Board Meeting</label>
    <nameField>
        <label>Board Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>