force-app/main/default/objects/Board_Meeting__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <description>Which board this meeting is for (defaults to the JCRC Board). JSI-123 / Jason Ott.</description>
    <label>Board</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Board Meetings</relationshipLabel>
    <relationshipName>Board_Meetings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>