force-app/main/default/objects/Board_Meeting__c/fields/Fiscal_Year_Label__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Label__c</fullName>
    <description>The fiscal year (July 1-June 30) this meeting belongs to, matching Annual Giving Summary labels. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>