force-app/main/default/objects/Board_Meeting__c/fields/FY_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_Start__c</fullName>
    <description>July 1 anchor of the meeting's fiscal year. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year Start</label>
    <type>Date</type>
</CustomField>