force-app/main/default/objects/Board_Meeting__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>Date the board meeting was held. JSI-123 / Jason Ott.</description>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>